<resources>
    <string name="app_name">MVP</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="invalid_login">Incorrect username or password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="loading">Loading...</string>
    <string name="connection_error">Connection Error Occurred</string>
    <string name="check_connection">Check internet connection and try again</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_title">Logout Confirmation</string>
    <string name="logout_confirmation_message">Are you sure you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_occurred">An error occurred</string>
    <string name="logo">Logo</string>
    <string name="send_me_password">Send Me New Password</string>
    <string name="username_does_not_exist">Username Doesn\'t Exist</string>
    <string name="email_sent">An email is sent with the new password</string>
    <string name="minimum_characters">At least %d characters</string>
</resources>
