<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_fragment_margin">

        <ImageView
            android:layout_width="@dimen/image_dimension"
            android:layout_height="@dimen/image_dimension"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:src="@mipmap/ic_launcher" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/views_margin" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_medium" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_medium" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/views_margin" />

        <CheckBox
            android:id="@+id/checkBox_rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="@dimen/font_medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/views_margin" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_black_button"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/views_margin" />

        <Button
            android:id="@+id/button_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:text="@string/forgot_password"
            android:textSize="@dimen/font_small" />

    </LinearLayout>

</ScrollView>
